# document-distributor

./: .flake8  .gitattributes  .gitignore  LICENSE  Makefile  ddist_installer.iss  distribute_bills.py  document_distributor.py  hello.py  pyproject.toml  requirements-build-linux.txt  requirements-build-windows.txt  requirements-windows.txt  requirements.txt
.github/workflows/: build.yml
document_distributor/: _gui.py  cli.py  document_distributor.py  gui.py
tests/: conftest.py  test_distributor.py
tests/test_data/: hostpoint-python.eml  hostpoint.eml  outlook-email.eml  test_info.xlsx
