[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "document_distributor"
version = "0.0.1"
dependencies = ["openpyxl"]

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
  # linters:
  "pylint",
  # formatters:
  "isort",
  "yapf",
  # unittests:
  "pytest",
  "smtpdfix",
]

[tool.isort]
profile = "google"
skip = ["venv", 'env']

[tool.yapf]
based_on_style = "google"
column_limit = 120
split_before_logical_operator = true
split_before_arithmetic_operator = true
split_before_dict_set_generator = true

[tool.yapfignore]
ignore_patterns = ["venv/*", "env/*"]
