[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "document_distributor"
version = "0.0.1"
dependencies = ["openpyxl", "toolz", "dataclasses-json"]

[project.scripts]
ddist = "document_distributor.cli:main"
ddist-gui = "document_distributor.gui:main"

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
  # linters:
  "flake8",
  "flake8-bandit",
  "flake8-bugbear",
  "flake8-builtins",
  "flake8-coding",
  "flake8-commas",
  "flake8-comprehensions",
  "flake8-docstrings",
  "flake8-expression-complexity",
  "flake8-import-order",
  "flake8-isort",
  "flake8-pep3101",
  "flake8-plugin-utils",
  "flake8-polyfill",
  "flake8-pytest",
  "flake8-pytest-style",
  "flake8-requirements",
  "flake8-simplify",
  "flake8-use-fstring",
  "pep8-naming",
  "pylint",
  # type-checker:
  "mypy",
  "types-openpyxl",
  # formatters:
  "isort",
  "yapf",
  "toml",
  # unittests:
  "pytest",
  "smtpdfix",
  # updater:
  "pip-tools",
  # installer:
  "pyinstaller",
]

[tool.isort]
profile = "google"
skip = ["venv", 'env']

[tool.yapf]
based_on_style = "google"
column_limit = 120
split_before_logical_operator = true
split_before_arithmetic_operator = true
split_before_dict_set_generator = true

[tool.yapfignore]
ignore_patterns = ["venv/*", "env/*"]
